# cashflow-cod

./: .env.example  .gitignore  .prettierignore  Dockerfile  LICENSE  README.md  docker-compose.yml  fly.toml  package.json  pnpm-lock.yaml  railway.json  tsconfig.base.json
.github/: pull_request_template.md
apps/admin/: .eslintrc.cjs  package.json  shopify.app.toml  shopify.web.toml  tsconfig.json  vite.config.ts
apps/admin/app/: db.server.ts  entry.server.tsx  root.tsx  shopify.server.ts
apps/admin/app/components/: ClientOnly.tsx
apps/admin/app/lib/: ab-testing.server.ts  abandoned.server.ts  address.server.ts  agency.server.ts  api-keys.server.ts  api-scopes.ts  calls.server.ts  cors.server.ts  couriers.server.ts  crm.server.ts  currency.ts  default-templates.server.ts  discounts.server.ts  email-integrations.server.ts  form-templates.server.ts  forms.server.ts  fraud-graph.server.ts  fx-rates.server.ts  gdpr.server.ts  i18n.server.ts  inbox.server.ts  install.server.ts  integrations.server.ts  landing-pages.server.ts  merchant-group.server.ts  otp.server.ts  payments.server.ts  pixels.server.ts  quantity-offers.server.ts  returns.server.ts  risk.server.ts  (+6 more)
apps/admin/prisma/: schema.prisma  seed-templates.ts
apps/admin/public/: mobile-agent-manifest.json  mobile-agent-sw.js
apps/ml-service/: README.md  pyproject.toml
apps/ml-service/app/: features.py  main.py  model.py  train.py
apps/worker/: package.json  tsconfig.json
apps/worker/src/: index.ts
docs/: FLY_DEPLOY.md  PLAN.md  RAILWAY_DEPLOY.md  TEST_PLAN_RAILWAY.md
scripts/: generate-icon.py
(+124 files in other folders)
