[project]
name = "cashflow-cod-ml"
version = "0.0.1"
description = "Cashflow COD ML service — RTO risk scoring (Phase 2.3)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "numpy>=1.26.0",
  "scikit-learn>=1.5.0",
  "joblib>=1.4.0",
]

[project.optional-dependencies]
xgboost = ["xgboost>=2.1.0"]
dev = ["pytest>=8.3.0", "httpx>=0.27.0"]

[tool.uv]
package = false
